--- a/test-command/Cargo.toml
+++ b/test-command/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
+futures = "0.3.31"
+reqwest = "0.12.22"
+tokio = { version = "1.0", features = ["full"] }
